# gitorit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.sh  install.sh  pyproject.toml  requirements.txt
scripts/: give-back.sh
src/gitorit/: __init__.py  analyzer.py  cli.py  detector.py  diff_simplifier.py  models.py  rewriter.py  test_analyzer.py  test_diff.py  timeline.py
templates/: dashboard.html.j2  report.md.j2  report_simple.md.j2
tests/: conftest.py  test_detector.py  test_models.py  test_rewriter.py  test_timeline.py
